# maildirsink

./: .gitignore  LICENSE  README-ja.md  README.md  pyproject.toml
reference/: maildir-delivery.sh
src/maildirsink/: __init__.py  __main__.py  cli.py  server.py  storage.py
tests/: test_storage.py
