[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "maildirsink"
version = "0.1.0"
description = "SMTP でメールを受け取り Maildir / JSON に保存するだけの開発用メール受信ツール"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tatsuya-SOGA", email = "sogatat@gmail.com" }]
keywords = ["smtp", "maildir", "email", "mail", "development", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Testing",
]
dependencies = ["aiosmtpd>=1.4"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sogatat/maildirsink"
Repository = "https://github.com/sogatat/maildirsink"
Issues = "https://github.com/sogatat/maildirsink/issues"

[project.scripts]
maildirsink = "maildirsink.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
