[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "maildirsink"
version = "0.1.3"
description = "Tiny SMTP sink that saves incoming mail straight to a Maildir or JSON — no UI, no forwarding"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tatsuya-SOGA", email = "sogatat@gmail.com" }]
keywords = ["smtp", "maildir", "email", "mail", "development", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Testing",
]
dependencies = ["aiosmtpd>=1.4"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sogatat/maildirsink"
Repository = "https://github.com/sogatat/maildirsink"
Issues = "https://github.com/sogatat/maildirsink/issues"

[project.scripts]
maildirsink = "maildirsink.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
